<resources>
    <string-array name="unidades_medida">
        <item>KG</item>
        <item>L</item>
        <item>UN</item>
    </string-array>
    <string name="app_name">SalveUmaVida</string>
    <string name="lore_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="content_description_imageButton_cardEdita">Edita a campanha atual</string>
    <string name="content_description_imageButton_cardAddItem">Adiciona item na campanha atual</string>
    <string name="content_description_imageButton_cardFinalizaCampanha">Finaliza a campanha atual, não permitindo adicionar mais itens a partir do card</string>
    <string name="text_cardDescricao">Estamos precisando de ração o mais rápido possível! Por favor nos ajudem.</string>
    <string name="text_cardTitulo">Campanha da Ração</string>
    <string name="text_cardTimeStamp">Anunciado em 26/06/2020</string>
    <string name="content_description_imageView_cardImagemCampanha">Imagem que representa a campanha atual</string>
    <string name="text_cardQuantidadeItens">0 Itens</string>
    <string name="content_description_imageButton_cardFavoritar">Botao que favorita a campanha</string>
    <string name="text_cardItemTitulo">Titulo do item</string>
    <string name="text_cardItemValorAutalProgressBar">Arrecadado X / Y UN</string>
    <string name="text_cardItemMaxValorProgressBar">500</string>
    <string name="hint_activity_campanha_visao_doador_pesquisa">Procurar por Nome, Descrição ou Itens</string>
    <string name="contentDescription_campanhasPesquisar">Botão pesquisar da activity que mostra as campanhas</string>
    <string name="hintCadastroCampanhaEditTextQuantidadeItem">Digite o nome do Item</string>
    <string name="textCadastroCampanhaLabelQuantidade">Quantidade:</string>
    <string name="textCadastroCampanhaLabelUnidade">Unidade:</string>
    <string name="textCadastroCampanhaLabelNome">Nome:</string>
    <string name="hintCadastroCampanhaEditTextNomeItem">Digite o nome do Item</string>
    <string name="contentDescriptionItemOngExclui">Exclui item da campanha</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fechar_a_tela_de_adicao_de_itens">Fechar a tela de adição de itens</string>
    <string name="mensagens">Mensagens</string>
    <string name="procurar">Procurar</string>
    <string name="favoritos">Favoritos</string>
    <string name="campanhas">Campanhas</string>
    <string name="data_da_campanha">Data da campanha</string>
    <string name="digite_uma_descricao_para_a_campanha">Digite uma descricao para a campanha</string>
    <string name="digite_o_titulo_da_campanha">Digite o titulo da campanha</string>
    <string name="selecione_uma_data">Selecione uma data</string>
    <string name="imagem_da_campanha">Imagem da campanha</string>
    <string name="mapa">Mapa</string>
    <string name="perfil">Perfil</string>
    <string name="arquiva_campanha_fazendo_com_que_fique_em_estado_de_finalizada">Arquiva campanha, fazendo com que fique em estado de finalizada</string>
    <string name="digite_a_quantidade_do_item">Digite a quantidade do item</string>
</resources>