<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bothMensagensFragment"
        android:icon="@drawable/ic_outline_mail_24"
        android:title="@string/mensagens" />

    <item
        android:id="@+id/bothProcurarFragment"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/procurar" />

    <item
        android:id="@+id/bothFavoritosFragment"
        android:icon="@drawable/ic_baseline_star_border_24"
        android:title="@string/favoritos" />

    <item
        android:id="@+id/ongCampanhasFragment"
        android:icon="@drawable/ic_outline_calendar_today_24"
        android:title="@string/campanhas" />
    <item
        android:id="@+id/bothUserLogadoFragment"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/perfil" />

</menu>