<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ongs.activity.campanhasActivity">

    <ImageButton
        android:id="@+id/cardEdita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:contentDescription="@string/content_description_imageButton_cardEdita"
        android:src="@drawable/ic_action_ong_editar"
        app:layout_constraintEnd_toStartOf="@+id/cardAddItem"
        app:layout_constraintTop_toBottomOf="@+id/cardDescricao" />

    <ImageButton
        android:id="@+id/cardAddItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:contentDescription="@string/content_description_imageButton_cardAddItem"
        android:src="@drawable/ic_action_ong_add_item"
        app:layout_constraintEnd_toStartOf="@+id/cardFinalizaCampanha"
        app:layout_constraintTop_toBottomOf="@+id/cardDescricao" />

    <ImageButton
        android:id="@+id/cardFinalizaCampanha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:contentDescription="@string/content_description_imageButton_cardFinalizaCampanha"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/ic_action_ong_finalizar_campanha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardDescricao" />

    <TextView
        android:id="@+id/cardDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:text="@string/text_cardDescricao"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImagemCampanha" />

    <TextView
        android:id="@+id/cardTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/text_cardTitulo"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardImagemCampanha"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardTimeStamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_cardTimeStamp"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/cardImagemCampanha"
        app:layout_constraintTop_toBottomOf="@+id/cardTitulo" />

    <ImageView
        android:id="@+id/cardImagemCampanha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_imageView_cardImagemCampanha"
        android:scaleType="centerInside"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>